# Emotional-labeling-system

./: pyproject.toml  realtimeSTT_test.py  test.py  wav_cut_30s.py  wav_format.py  測試文章.txt
logs/: llm_response_20250503_193245.json  llm_response_20250503_194717.json  llm_response_20250503_194842.json  llm_response_20250503_195345.json  llm_response_20250504_061327.json
myflaskproject/: emotion_highlighter.py  my_flask_apis.py  realtime_stt_flask.py  realtime_test.py  test.py
myflaskproject/logs/: llm_response_20250505_074927.json  llm_response_20250505_080704.json  llm_response_20250505_081452.json  llm_response_20250505_083441.json  llm_response_20250505_094253.json  llm_response_20250505_094429.json  llm_response_20250505_112828.json  llm_response_20250505_113408.json  llm_response_20250507_223624.json
myflaskproject/static/: realtimestt_client.js
myflaskproject/static/styles/: upload_page.css
myflaskproject/templates/: realtime_stt.html  record.html  record.html.tmp  upload.html
sttpage/: client.js  index.html  index.html.tmp  index2.html.tmp  slide_view.html
